--- a/login/index.html
+++ b/login/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +10,12 @@
     <link rel="shortcut icon" href="https://img.icons8.com/?size=512&id=115640&format=png" type="image/x-icon">
     <script src="../scripts/login.js"></script>
 </head>
-
 <body>
     <h1>Faça login</h1>
     <main class="background">
-        <section id="base-login">
+        <section id="base-login"><!--Base-fora-login-->
             <div id="imagem-lateral"></div>
-            <div id="login">
+            <div id="login"><!--Login bloco-->
                 <h2>Acessar page</h2>
                 <p id="cadastro">Para criar uma conta basta clicar em <a href="">cadastro</a> </p>
                 <form action="../ds-login" method="post">
@@ -38,5 +36,4 @@
         </section>
     </main>
 </body>
-
 </html>
