--- a/login/index.html
+++ b/login/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="shortcut icon" href="https://img.icons8.com/?size=512&id=115640&format=png" type="image/x-icon">
     <script src="../scripts/login.js"></script>
 </head>
+
 <body>
     <h1>Faça login</h1>
     <main class="background">
@@ -17,7 +19,7 @@
             <div id="imagem-lateral"></div>
             <div id="login"><!--Login bloco-->
                 <h2>Acessar page</h2>
-                <p id="cadastro">Para criar uma conta basta clicar em <a href="">cadastro</a> </p>
+                <p id="cadastro">Para criar uma conta basta clicar em <a href="../cadastro/index.html">cadastro</a> </p>
                 <form action="../ds-login" method="post">
                     <fieldset> <!--Input email-->
                         <legend><label class="material-symbols-outlined" for="id-mail">mail</label></legend>
@@ -36,4 +38,5 @@
         </section>
     </main>
 </body>
+
 </html>
