--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="login"><!--Login bloco-->
                 <h2>Acessar page</h2>
                 <p id="cadastro">Para criar uma conta basta clicar em <a href="../cadastro/index.html">cadastro</a> </p>
-                <form action="../ds-login" method="post">
+                <form action="" method="post">
 
                     <div class="email">
                         <fieldset> <!--Input email-->
